<resources>
    <string name="app_name">MusicAvito</string>

    <!-- Fragment playback tracks -->
    <string name="album_cover_description">Описание</string>
    <string name="track_title">Название трека</string>
    <string name="artist_name">Исполнитель</string>
    <string name="album_name">Название альбома</string>
    <string name="track_progress">00:00</string>
    <string name="track_duration">03:45</string>
    <string name="prev_button_description">Предыдущий трек</string>
    <string name="play_pause_button_description">Воспроизведение/Пауза</string>
    <string name="next_button_description">Следующий трек</string>
    <string name="release_year">Год релиза</string>
    <string name="track_duration_label">Длительность трека</string>
    <string name="track_position_label">Позиция трека в альбоме</string>
    <string name="placeholder">-</string>
    <string name="download_track">Скачать трек</string>
    <string name="back_button_description">Описание кнопки назад</string>

    <!-- PlayerTrackFragment -->
    <string name="error_no_track_id">Ошибка: trackId не передан</string>
    <string name="error_last_track">Это последний трек</string>
    <string name="error_first_track">Это первый трек</string>
    <string name="track_download_success">Трек скачан: %1$s</string>
    <string name="track_download_error">Ошибка скачивания</string>
    <string name="already_downloaded">Трек уже скачан</string>

    <!-- TrackDownloaderErrors toasts -->
    <string name="download_error">Ошибка загрузки: %1$d</string>
    <string name="stream_read_error">Ошибка чтения потока</string>

</resources>