<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/padding_large">

    <ImageView
        android:id="@+id/albumCoverImageView"
        android:layout_width="@dimen/album_cover_size"
        android:layout_height="@dimen/album_cover_size"
        android:contentDescription="@string/album_cover_description"
        android:scaleType="fitCenter"
        android:src="@drawable/cover_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/trackTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/padding_large"
        android:text="@string/track_title"
        android:textSize="@dimen/text_size_xlarge"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/albumCoverImageView" />

    <TextView
        android:id="@+id/artistNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/padding_medium"
        android:text="@string/artist_name"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trackTitleTextView" />

    <TextView
        android:id="@+id/albumNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/padding_small"
        android:text="@string/album_name"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/artistNameTextView" />

    <SeekBar
        android:id="@+id/progressSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:paddingTop="@dimen/padding_xlarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/albumNameTextView" />

    <TextView
        android:id="@+id/trackProgressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_medium"
        android:text="@string/track_progress"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintStart_toStartOf="@id/progressSeekBar"
        app:layout_constraintTop_toBottomOf="@id/progressSeekBar" />

    <TextView
        android:id="@+id/trackDurationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_medium"
        android:text="@string/track_duration"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintEnd_toEndOf="@id/progressSeekBar"
        app:layout_constraintTop_toBottomOf="@id/progressSeekBar" />

    <LinearLayout
        android:id="@+id/playerControlsLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="@dimen/padding_xlarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trackProgressTextView">

        <ImageButton
            android:id="@+id/previousImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/prev_button_description"
            android:src="@drawable/back_button" />

        <ImageButton
            android:id="@+id/playPauseImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/play_pause_button_description"
            android:src="@drawable/play_button" />

        <ImageButton
            android:id="@+id/nextImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/next_button_description"
            android:src="@drawable/forward_button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
